cfn/network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Provisions 2 public subnets, 2 private subnets, and 1 NAT gateways for ECS Cluster.

Parameters:
  Environment:
    Type: String

  Prefix:
    Type: String

  Tag:
    Type: String
  
  VPCName:
    Type: String
  
  InternetGatewayExportName:
    Type: String

  PrivateSubnet1CIDR:
    Type: String
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
 
  PrivateSubnet2CIDR:
    Type: String
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'

  PublicSubnet1CIDR:
    Type: String
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'

  PublicSubnet2CIDR:
    Type: String
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'

Resources:
# Private
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Fn::ImportValue: !Ref VPCName
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: !Ref AWS::Region
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-private-subnet-1"
        - Key: Environment
          Value: !Sub "${Tag}"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Fn::ImportValue: !Ref VPCName
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone:
        Fn::Select:
          - 3
          - Fn::GetAZs: !Ref AWS::Region
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-private-subnet-2"
        - Key: Environment
          Value: !Sub "${Tag}"

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Ref VPCName
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-private-rtb-1"
        - Key: Environment
          Value: !Sub "${Tag}"
  
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Ref VPCName
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-private-rtb-2"
        - Key: Environment
          Value: !Sub "${Tag}"

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  
  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateRouteTable1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

# Public
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Fn::ImportValue: !Ref VPCName
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: !Ref AWS::Region
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-public-subnet-1"
        - Key: Environment
          Value: !Sub "${Tag}"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Fn::ImportValue: !Ref VPCName
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone:
        Fn::Select:
          - 3
          - Fn::GetAZs: !Ref AWS::Region
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-public-subnet-2"
        - Key: Environment
          Value: !Sub "${Tag}"

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-eip-gt-1"
        - Key: Environment
          Value: !Sub "${Tag}"

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-eip-gt-2"
        - Key: Environment
          Value: !Sub "${Tag}"

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-nat-gt-1"
        - Key: Environment
          Value: !Sub "${Tag}"

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-nat-gt-2"
        - Key: Environment
          Value: !Sub "${Tag}"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Ref VPCName
      Tags:
        - Key: Name
          Value: !Sub "${Prefix}-ecs-public-rtb"
        - Key: Environment
          Value: !Sub "${Tag}"

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Fn::ImportValue: !Ref InternetGatewayExportName

  PublicRouteTable1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicRouteTable3Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

Outputs:
  PrivateSubnet3:
    Description: A reference to the private subnet in AZ c
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${Prefix}-ecs-private-subnet-1"

  PrivateSubnet4:
    Description: A reference to the private subnet in AZ d
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${Prefix}-ecs-private-subnet-2"

  PrivateSubnetsECS:
    Description: A list of the private subnets
    Value: !Join
      - ","
      - - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
    Export:
      Name: !Sub "${Prefix}-ecs-private-subnets"

  PrivateRouteTables:
    Description: A list of the private route tables
    Value: !Join
      - ","
      - - !Ref PrivateRouteTable1
        - !Ref PrivateRouteTable2
    Export:
      Name: !Sub "${Prefix}-ecs-private-rtb"

  PublicRouteTable:
    Description: A reference to the private route tables
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub "${Prefix}-ecs-public-rtb"

  PublicSubnet1:
    Description: A reference to the public subnet in AZ c
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${Prefix}-ecs-public-subnet-1"

  PublicSubnet2:
    Description: A reference to the public subnet in AZ d
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${Prefix}-ecs-public-subnet-2"

  PublicSubnets:
    Description: A list of the private subnets
    Value: !Join
      - ","
      - - !Ref PublicSubnet1
        - !Ref PublicSubnet2
    Export:
      Name: !Sub "${Prefix}-ecs-public-subnets"
